package service;

public enum Categoria {
    NOVATO,
    APRENDIZ,
    BUENO,
    MAESTRO,
    PASANTE_NOVATO,
    PASANTE_EXPERTO
}
